[starfall] repair background animations to use visibilitychange API

--- a/root/css/index.css
+++ b/root/css/index.css
@@ -276,7 +276,7 @@ body.mobile>.scrollbar {
 
   animation: bg-hex linear infinite;
   color: var(--dark);
-  opacity: 0.75;
+  opacity: 0.85;
 }
 
 @keyframes bg-hex-position {
